--- a/style.css
+++ b/style.css
@@ -1,49 +1,52 @@
 *{
   padding: 0;
-
   margin: 0;
+  box-sizing: border-box;
 }
 
-header{
-
-  height: 45px;
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0 , 0, 0, 0.5);
+  position: sticky;
+  top: 0;
 }
-
-header nav ul{
-
+ .navbar ul{
 display: flex;
-margin-left: 70%;
+margin: 20px 0px;
 list-style: none;
-
 }
-
-header nav ul li{
-  padding-left: 10%;
+.navbar ul li{
+  font-family: century;
+  font-size: 1.1rem;
+  font-weight: bold; 
 }
-header a{
+.navbar ul li a{
   text-decoration: none;
-  color: skyblue;
+  color: white;
+  padding: 8px 25px;
+  transition: all .5s ease;
+}
+.navbar ul li a:hover{
+  background-color: white;
+  color: black;
+  box-shadow: 0 0 10px;
 }
 section{
-  height: 100vh;
-
+  height: 840px;
+  flex-direction: column;
   border: 1px solid grey;
-
   display: flex;
-
   justify-content: center;
-
-  align-items: center;
-  
+  align-items: center; 
+  color: white;
 }
-
 .box{
-  margin-top: 10%;
-  
+  margin-top: 10%;  
 }
-
 .box img{
-  height: 300px;
+  height: 250px;
   
 }
 .profile{
@@ -54,25 +57,58 @@ section{
   margin-top: 2%;
   font-size: 3em;
   font-family: Arial, Helvetica, sans-serif;
-  color: goldenrod; 
-  text-align: center;
-  border-spacing: 1px;
+  color: blue; 
+  text-align: center; 
+}
+#about{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 20px;
+ 
+}
+#about h1{
+  color: blue;
+  font-weight: bolder;
   
+}
+.pic{
+  display: flex;
+}
+.pic img{
+  width: 575px;
+  height: 400px;
+}
+#bpc{
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  padding: 10px;
+}
+#bpc h2{
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: blue;
+}
+#bpc p{
+  color: blue;
+  text-indent: 50px;
+  text-align: justify;
+}
+#achievement{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 20px;
+}
+.gallery img{
+ float: left;
+ padding: 5px;
+ align-items: center;
   
 }
-.gallery{
-  border-radius: 10%;  
-}
-.gallery2{
-  border-radius: 10%;  
-}
-.gallery3{
-  border-radius: 10%;  
-}
-.gallery4{
-  border-radius: 10%;  
-}
-
 footer{
   line-height: 40px;
 
@@ -85,7 +121,10 @@ footer{
 .box p, ul{
   margin-top: 2%;
   font-size: 1.5rem;
-
+  text-align: center;
+  color: blue;
+  font-family: Arial, Helvetica, sans-serif;
+  list-style: none;
 }
 
 #intro{
@@ -95,7 +134,7 @@ footer{
 #about{
   background-color: lightgoldenrodyellow;
 }
-#event{
+#achievement{
   background-color: lightgoldenrodyellow;
 }
 #contact{
